<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_5dp"
        android:background="@drawable/bg_header_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:layout_marginBottom="@dimen/margin_top_10dp"
            android:gravity="center"
            android:text="@string/txt_login"
            android:textColor="@color/mau_xanh_text_view"
            android:textSize="28dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/txt_ten_dang_nhap"
            android:textColorHint="@color/mau_xanh_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ten_dang_nhap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_input_text"
                android:background="@drawable/bg_input_text_blue"
                android:padding="@dimen/input_layout_padding_10dp"
                android:textSize="@dimen/text_size_20_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/txt_mat_khau"
            android:textColorHint="@color/mau_xanh_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mat_khau"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_input_text"
                android:background="@drawable/bg_input_text_blue"
                android:inputType="textPassword"
                android:padding="@dimen/input_layout_padding_10dp"
                android:textSize="@dimen/text_size_20_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_dang_nhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_20dp"
            android:background="@drawable/bg_btn"
            android:padding="@dimen/input_layout_padding_10dp"
            android:text="@string/txt_login" />

        <TextView
            android:id="@+id/id_text_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/margin_5dp"
            android:text="@string/txt_change_password"
            android:textColor="@color/mau_xanh_text_view"
            android:textSize="@dimen/text_size_12_sp" />
    </LinearLayout>

</RelativeLayout>