<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainSinhVienActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_layout"
            android:orientation="vertical"
            android:padding="@dimen/margin_5dp">

            <TextView
                android:id="@+id/tv_ho_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ho_ten"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp" />

            <TextView
                android:id="@+id/tv_ma_sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ma_sinh_vien"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp" />


            <TextView
                android:id="@+id/tv_lop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ho_ten"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:layout_marginBottom="@dimen/margin_top_10dp"
            android:gravity="center"
            android:text="@string/list_class"
            android:textColor="#2F8CEA"
            android:textSize="28dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/id_list_lop_hoc_phan"
        android:layout_below="@id/header"
        android:layout_above="@id/layout_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/layout_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_chia_se_bluetooth"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/bg_btn"
            android:src="@drawable/ic_share_bluetooth" />

        <ImageButton
            android:id="@+id/img_log_out"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/bg_btn"
            android:src="@drawable/ic_log_out" />
    </LinearLayout>

</RelativeLayout>