<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/txt_hint_diem_cc"
            android:textColorHint="@color/mau_xanh_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_diem_cc"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="@dimen/layout_height_input_text"
                android:background="@drawable/bg_input_text_blue"
                android:padding="@dimen/input_layout_padding_10dp"
                android:textSize="@dimen/text_size_20_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/txt_hint_diem_tx"
            android:textColorHint="@color/mau_xanh_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_diem_tx"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="@dimen/layout_height_input_text"
                android:background="@drawable/bg_input_text_blue"
                android:padding="@dimen/input_layout_padding_10dp"
                android:textSize="@dimen/text_size_20_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/txt_hint_diem_thi"
            android:textColorHint="@color/mau_xanh_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_diem_thi"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="@dimen/layout_height_input_text"
                android:background="@drawable/bg_input_text_blue"
                android:padding="@dimen/input_layout_padding_10dp"
                android:textSize="@dimen/text_size_20_sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:text="Hủy" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:text="Cập nhật" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>